# qkd_client

./: .gitignore  Cargo.toml  README.md  analyse.sh  available.sh  check.sh  cleanup.sh  combined_output.txt  combined_zk_only.txt  concat_files.sh  config.json  config.json.example  diff,txt  diff.txt  et  fix_all.sh  fix_multi_source_input.sh  fix_vrf.sh  guide.md  guide2.md  guide3.md  inspect_zk.sh  key_proof.r1cs  key_proof.sym  nohup.out  notes.txt  outpout.txt  package-lock.json  package.json  repo_tree.txt  understand.py  vrf_seed_proof_input.json  zk_analysis.sh  zk_implementation_analysis.txt
certificate/Basejump/: USER_001.pem  decrypted_USER_001-key.pem  decrypted_USER_002-key.pem  evq-root.pem  readme.md
certificate/Basejump/bellevue/: USER_001-key.pem  USER_002.pem
certificate/Basejump/eq1/: USER_001-chain.pem  USER_001.jks  USER_001.p12  USER_002-chain.pem  USER_002-key.pem  USER_002.jks  USER_002.p12
certificate/Basejump/old/: USER_001-chain.pem  USER_001-key.pem  USER_001.jks  USER_001.p12  USER_001.pem  USER_002-chain.pem  USER_002-key.pem  USER_002.jks  USER_002.p12  USER_002.pem  decrypted_USER_001-key.pem  decrypted_USER_002-key.pem  evq-root.jks
certificate/IDQ/: ChrisCA.p12  ChrisCA.pem  ETSIB.pem  QKDServer.pem  QKDServer_pkey.pem
certificate/Toshiba/certs/: ca_crt.pem  client_alice.p12  client_alice_crt.pem  client_alice_key.pem  client_alice_key_pkcs8.pem  client_bob_crt.pem  client_bob_key.pem  combined_alice.pem  server_crt.pem  server_key.pem
certificate/Toshiba/ciena_certs/: ca_crt.pem  general.cert.pem  server_crt.pem  server_key.pem
certificate/Toshiba/new_certs/: get_keys.sh  toshiba-ca.cert.pem  toshiba-entity-alice-client.cert.pem  toshiba-entity-alice-server.cert.pem  toshiba-entity-bob-client.cert.pem  toshiba-entity-bob-server.cert.pem  toshiba-entity.key.pem
certificate/Toshiba/origin_certs/: ca_crt.pem  client_alice_crt.pem  client_alice_key.pem  client_bob_crt.pem  client_bob_key.pem  server_crt.pem  server_key.pem
circomlib/: circomlib
circuits/: Verifier.sol  input.json  key_verification.r1cs  key_verification.sym  multi_source_input.json  multi_source_key.circom  multi_source_key_0001.zkey  multi_source_proof.json  multi_source_verification_key.json  pot12_0001.ptau  proof.json  proof_to_verify.json  public.json  vrf_input.json  vrf_proof.circom  vrf_proof.json  vrf_seed_proof.circom  vrf_seed_proof_final.zkey  vrf_seed_proof_input.json  vrf_seed_proof_proof.json  vrf_seed_proof_verification_key.json  vrf_seed_proof_witness.wtns  vrf_witness.wtns  witness.wtns
circuits.bad/: input.json  key_verification.circom  key_verification_0000.zkey  key_verification_0001.zkey  multi_source_input.json  multi_source_key.r1cs  multi_source_key.sym  multi_source_key_0000.zkey  multi_source_proof_to_verify.json  multi_source_witness.wtns  proof.json  proof_to_verify.json  public.json  verification_key.json  vrf_seed_proof.r1cs  vrf_seed_proof_0000.zkey  vrf_seed_proof_0001.zkey  vrf_seed_proof_final.zkey  vrf_seed_proof_input.json  vrf_seed_proof_proof.json  vrf_seed_proof_proof_to_verify.json  vrf_seed_proof_witness.wtns  vrf_verification_key.json  witness.wtns
circuits.bad/key_verification_js/: key_verification.wasm
circuits.bad/multi_source_key_js/: multi_source_key.wasm
circuits.bad/vrf_seed_proof_cpp/: Makefile
circuits.bad/vrf_seed_proof_js/vrf_seed_proof_js/: vrf_seed_proof.wasm
circuits/multi_source_key_js/: witness.wtns
circuits/vrf_seed_proof_js/: vrf_seed_proof.sym
circuits/vrf_seed_proof_js/vrf_seed_proof_js/: vrf_seed_proof.wasm
doc/: commands  overview.dot  qkd_client_guide.md
key_proof_js/: key_proof.wasm
proofs/: proof_export.json
scripts/: check_placeholders.sh  codelog.sh  combined_output.txt  compile_citcuit.sh  inspect.sh  inspect_zk.sh  qkd_next_steps.sh  tree.sh  unlock.sh  unlock_cargo.sh
src/: lib.rs  main.rs  test_qkd.rs:
src/byzantine/: buffer.rs  byzantine_node.rs  consensus.rs  manager.rs  mod.rs  quantum_consensus.rs  vrf_consensus.rs
src/qkd/: api.rs  client.rs  etsi_api.rs  key_manager.rs  mod.rs  qkd_manager.rs
src/quantum_auth/: authenticator.rs  circuit.rs  commitment.rs  hybrid.rs  mod.rs  pq_auth.rs
src/quantum_auth/pq/: mod.rs  sphincs.rs  sphincs_optimized.rs
src/reporter/: benchmark.rs  config.rs  key_proof.rs  metrics.rs  mod.rs  qkd_client.rs
src/shared/: buffer.rs
src/vrf/: core.rs  integrated.rs  integrated_vrf.rs  mod.rs  qkd_vrf.rs
src/zk/: circuit.rs  circuit_manager.rs  mod.rs  multi_source_generator.rs  multi_source_proof.rs  my_circuit.rs  proof.rs  quantum_id.feb27.rs  quantum_id.rs  vrf.rs
src/zk/stark/: air.rs  falcon_vrf.rs  field.rs  field.rs:  fri.rs  merkle.rs  mod.rs  poly_commitment.rs  polynomial.rs  stark.rs  vrf_seed_proof.rs  vrf_stark.rs
src/zk/stark/stark_examples/: vrf_stark_example.rs
src/zk/stark/winterfell/: config.rs  implementation.rs  mod.rs  qkd_bridge.rs  utils.rs  vrf_air.rs  vrf_prover.rs  vrf_trace.rs  (+1 more)
