[package]
name = "qkd_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "qkd_client"
path = "src/lib.rs"

[[bin]]
name = "qkd_client"
path = "src/main.rs"



[dependencies]
# Arkworks base
ark-std = "0.5.0"         
ark-ff = "0.5.0"          
ark-serialize = "0.5.0"
# The main BN254 curve
ark-bn254 = "0.5.0"
# R1CS / relations
ark-relations = "0.5.0"
ark-groth16 = "0.5.0"
# SNARK trait
ark-snark = "0.5.0"
# Circom
ark-circom = "0.5.0"
# For serialization
bincode = "1.3"
# Other dependencies
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "native-tls", "native-tls-vendored"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
num-bigint = "0.4"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.19"
tracing = "0.1"
wasmtime = "12.0"
# Post-quantum crypto
pqcrypto-traits = "0.3.4"
pqcrypto-sphincsplus = "0.7.0"
# Classical crypto for hybrid authentication
ring = "0.16.20"
hex = "0.4.3"
sha3 = "0.10.0"
chrono = "0.4.40"
mockito = "1.6.1"
uuid = { version = "1.4", features = ["v4"] }
clap = { version = "4.1", features = ["derive"] }
tempfile = "3.17.1"
winterfell = "0.12.0"
winter-crypto = "0.12.0"
winter-math = "0.12.0"
rand_chacha = "0.9.0"

rand_core = "0.9.3"
num-traits = "0.2.19"
num-integer = "0.1.45"
num-rational = "0.4.0"

num-complex = "0.4.0"
num-iter = "0.1.43"
num-derive = "0.4.2"
anyhow = "1.0"
[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }

#[[bench]]
#name = "reporter_benchmarks"
#harness = false

[profile.release]
opt-level = 3
lto = true



# (commented out by prepare_winterfell.py) # ZK-STARK implementation
winterfell = "0.8.0"


[[bin]]
# (commented out by prepare_winterfell.py) name = "vrf_seed_stark_example"
# (commented out by prepare_winterfell.py) path = "src/bin/stark_examples/vrf_seed_example.rs"
