[package]
name = "qkd_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "qkd_client"
path = "src/lib.rs"

[[bin]]
name = "qkd_client"
path = "src/main.rs"

# You can completely comment out or remove this if you don’t want to build the extra STARK example.
# [[bin]]
# name = "vrf_seed_stark_example"
# path = "src/bin/stark_examples/vrf_seed_example.rs"

[dependencies]
# Arkworks / Circom / Post-Quantum / etc.
ark-std = "0.5.0"
ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-bn254 = "0.5.0"
ark-relations = "0.5.0"
ark-groth16 = "0.5.0"
ark-snark = "0.5.0"
ark-circom = "0.5.0"
bincode = "1.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "native-tls", "native-tls-vendored"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
num-bigint = "0.4"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.19"
tracing = "0.1"
wasmtime = "12.0"
pqcrypto-traits = "0.3.4"
pqcrypto-sphincsplus = "0.7.0"
ring = "0.16.20"
hex = "0.4.3"
sha3 = "0.10.0"
chrono = "0.4.40"
mockito = "1.6.1"
uuid = { version = "1.4", features = ["v4"] }
clap = { version = "4.1", features = ["derive"] }
tempfile = "3.17.1"

# Winterfell-based STARK packages
winterfell = "0.12.0"
winter-crypto = "0.12.0"
winter-math = "0.12.0"

rand_chacha = "0.9.0"
rand_core = "0.9.3"
num-traits = "0.2.19"
num-integer = "0.1.45"
num-rational = "0.4.0"
num-complex = "0.4.0"
num-iter = "0.1.43"
num-derive = "0.4.2"
anyhow = "1.0"
thiserror = "2.0.12"
zeroize = "1.5"  

winter-air = "0.12"
winter-verifier = "0.12"
sha2 = "0.10"
hmac = "0.12"


toml = "0.8.20"

mockall = "0.13.1" 
falcon-rust = "0.1.2"
[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }

[profile.release]
opt-level = 3
lto = true
